add new headers, edit posts, svg for orm

--- a/posts/2022-10-11-prodigy-db-intro/index.qmd
+++ b/posts/2022-10-11-prodigy-db-intro/index.qmd
@@ -2,6 +2,7 @@
 title: "Retrieving annotations in Prodigy"
 author: "Ryan Wesslen"
 date: "2022-10-11"
+image: header.jpeg
 description: "How to use Prodigy database recipes for handling annotated data."
 categories: [prodigy, database, sqlite]
 execute: 
