update prodigy post for chinese course

--- a/posts/2022-09-28-prodigy-chinese/index.qmd
+++ b/posts/2022-09-28-prodigy-chinese/index.qmd
@@ -9,7 +9,11 @@ image: chinese_preview.png
 description: "Overview of how to annotate with Chinese in Prodigy"
 ---
 
-Similar to other major languages like English, spaCy offers [four pipelines for Chinese](https://spacy.io/models/zh): `zh_core_web_sm`, `zh_core_web_md`, `zh_core_web_lg`, and `zh_core_web_trf`. 
+Similar to other major languages like English, spaCy offers [four pipelines for Chinese](https://spacy.io/models/zh): `zh_core_web_sm`, `zh_core_web_md`, `zh_core_web_lg`, and `zh_core_web_trf`.
+
+:::{.tip}
+There's a [Chinese version of Advanced NLP with spaCy](https://course.spacy.io/zh/chapter1), the free and interactive online course on spaCy! You'll learn how to use spaCy to build advanced natural language understanding systems, using both rule-based and machine learning approaches.
+:::
 
 To get started you need to make sure you have one of the pipelines installed.
 
