add bayesian-beagle images

--- a/about.qmd
+++ b/about.qmd
@@ -1,22 +1,13 @@
 ---
-title: "Ryan Wesslen"
-image: profile.jpg
+title: "Bayesian beagle"
+image: bayesian-beagle.png
 about:
   template: jolla
-  links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com/ryanwesslen
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com/in/ryanwesslen
-    - icon: github
-      text: Github
-      href: https://github.com/wesslen
-    - icon: person-circle
-      text: Website
-      href: https://wesslen.netlify.app
+  # links:
+  #   - icon: person-circle
+  #     text: Website
+  #     href: https://wesslen.netlify.app
 
 ---
 
-I'm a machine learning engineer at Explosion
+I'm a Bayesian beagle who has curated reading though LLM generation.
