--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,7 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
+  image-placeholder: bayesian-beagle.png
 page-layout: full
 title-block-banner: true
 ---
