--- a/about.qmd
+++ b/about.qmd
@@ -10,4 +10,4 @@ about:
 
 ---
 
-I'm a Bayesian beagle who has curated reading though LLM generation.
+I'm a Bayesian beagle who has curated a LLM-summarized articles on LLMs.
