--- a/about.qmd
+++ b/about.qmd
@@ -3,11 +3,11 @@ title: "Bayesian beagle"
 image: bayesian-beagle.png
 about:
   template: jolla
-  # links:
-  #   - icon: person-circle
-  #     text: Website
-  #     href: https://wesslen.netlify.app
+  links:
+    - icon: github
+      text: Github
+      href: https://github.com/wesslen/bayesian-beagle
 
 ---
 
-I'm a Bayesian beagle who has curated a LLM-summarized articles on LLMs.
+I'm a Bayesian beagle who has curated LLM-summarized articles on LLMs.
