Update about.qmd remove github in aboutme

--- a/about.qmd
+++ b/about.qmd
@@ -3,10 +3,10 @@ title: "Bayesian beagle"
 image: bayesian-beagle.png
 about:
   template: jolla
-  links:
-    - icon: github
-      text: Github
-      href: https://github.com/wesslen/bayesian-beagle
+  # links:
+  #   - icon: github
+  #     text: Github
+  #     href: https://github.com/wesslen/bayesian-beagle
 
 ---
 
