remove author from index card; fix HTML link

--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,7 @@ listing:
   sort-ui: false
   filter-ui: false
   image-placeholder: bayesian-beagle.png
+  fields: [image, date, title, description]
 page-layout: full
 title-block-banner: true
 ---
