readd categories to index.qmd card

--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ listing:
   sort-ui: false
   filter-ui: false
   image-placeholder: bayesian-beagle.png
-  fields: [image, date, title, description]
+  fields: [image, date, title, description, categories]
 page-layout: full
 title-block-banner: true
 ---
