--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,14 @@
 ---
-title: "Ryan's LLM Blog 🤖"
 listing:
   contents: posts
   sort: "date desc"
   type: grid
   categories: true
-  sort-ui: false
-  filter-ui: false
+  sort-ui: true
+  filter-ui: true
+  feed: true
   image-placeholder: bayesian-beagle.png
   fields: [image, date, title, description, categories]
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
