--- a/index.qmd
+++ b/index.qmd
@@ -4,11 +4,11 @@ listing:
   sort: "date desc"
   type: grid
   categories: true
-  sort-ui: true
-  filter-ui: true
+  sort-ui: [date, title]
+  filter-ui: [title, date]
   feed: true
   image-placeholder: bayesian-beagle.png
-  fields: [image, date, title, description, categories]
+  fields: [image, date, title, description, categories, filename]
 page-layout: full
 title-block-banner: false
 ---
