--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ listing:
   filter-ui: [title, date]
   feed: true
   image-placeholder: bayesian-beagle.png
-  fields: [image, date, title, description, categories, filename]
+  fields: [image, date, title, description, categories]
 page-layout: full
 title-block-banner: false
 ---
