add id to box search and post metadata

--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ listing:
   type: grid
   categories: true
   sort-ui: [date, title]
-  filter-ui: [title, date]
+  filter-ui: [title, date, id]
   feed: true
   image-placeholder: bayesian-beagle.png
   fields: [image, date, title, description, categories]
