remove comments from index/about, add aboutme

--- a/index.qmd
+++ b/index.qmd
@@ -11,4 +11,5 @@ listing:
   fields: [image, date, title, description, categories]
 page-layout: full
 title-block-banner: false
+comments: false
 ---
