--- a/about.qmd
+++ b/about.qmd
@@ -7,7 +7,18 @@ about:
   #   - icon: github
   #     text: Github
   #     href: https://github.com/wesslen/bayesian-beagle
-
+comments: false
 ---
 
-I'm a Bayesian beagle who has curated LLM-summarized articles on LLMs.
+Welcome to the Bayesian beagle blog! This project is a unique intersection of machine learning and scientific communication, providing a platform where readers can quickly get insights from the latest research papers hosted on [ArXiv](https://arxiv.org/). Utilizing state-of-the-art Large Language Models (LLMs), our system generates concise, comprehensible summaries of complex research articles, covering a wide array of disciplines.
+
+Our blog is built using [Quarto](https://quarto.org/), an open-source scientific and technical publishing system designed for creating beautiful, data-driven content. It is then published with [Netlify](https://app.netlify.com/).
+
+```mermaid
+graph LR
+    A["Download daily Arxiv articles"] --> B["Predict and Filter LLM topic"]
+    B --> C["Summarize short docs"]
+    B --> D["Summarize by Map-Reduce long docs"]
+    C --> E["Update website with summaries daily"]
+    D --> E
+```
