change to table type from grid in quarto

--- a/index.qmd
+++ b/index.qmd
@@ -2,13 +2,12 @@
 listing:
   contents: posts
   sort: "date desc"
-  type: grid
+  type: table
   categories: true
   sort-ui: [date, title]
   filter-ui: [title, date, id]
   feed: true
-  image-placeholder: bayesian-beagle.png
-  fields: [image, date, title, description, categories]
+  fields: [date, title, description, categories]
 page-layout: full
 title-block-banner: false
 comments: false
