reimplement grid layout

--- a/index.qmd
+++ b/index.qmd
@@ -2,12 +2,13 @@
 listing:
   contents: posts
   sort: "date desc"
-  type: table
+  type: grid
   categories: true
   sort-ui: [date, title]
   filter-ui: [title, date, id]
   feed: true
-  fields: [date, title, description, categories]
+  image-placeholder: bayesian-beagle.png
+  fields: [image, date, title, description, categories]
 page-layout: full
 title-block-banner: false
 comments: false
