update for 1st image

--- a/posts/Nevermind_Instruction_Override_and_Moderation_in_Large_Language_Models/2024-02-05-Nevermind_Instruction_Override_and_Moderation_in_Large_Language_Models.qmd
+++ b/posts/Nevermind_Instruction_Override_and_Moderation_in_Large_Language_Models/2024-02-05-Nevermind_Instruction_Override_and_Moderation_in_Large_Language_Models.qmd
@@ -5,14 +5,14 @@ id: "2402.03303v1"
 description: "LLMs perform best in following instructions, but struggle with overrides and safety guidelines."
 author: Edward Kim
 date: "2024-02-05"
-image: "img/2402.03303v1/image_1.png"
+image: "../../img/2402.03303v1/image_1.png"
 categories: ['production', 'architectures', 'security']
 format:
   html:
     code-overflow: wrap
 ---
 
-![](img/2402.03303v1/image_1.png)
+![](../../img/2402.03303v1/image_1.png)
 
 ### **Summary:**
 - Investigates and benchmarks Large Language Models (LLMs) on the task of explicit instruction following in conflicting situations, such as overrides.
