--- a/index.qmd
+++ b/index.qmd
@@ -9,6 +9,8 @@ listing:
   feed: true
   image-placeholder: bayesian-beagle.png
   fields: [image, date, title, description, categories]
+execute:
+  freeze: true
 page-layout: full
 title-block-banner: false
 comments: false
