Update about.qmd for mermaid

--- a/about.qmd
+++ b/about.qmd
@@ -14,7 +14,7 @@ Welcome to the Bayesian beagle blog! This project is a unique intersection of ma
 
 Our blog is built using [Quarto](https://quarto.org/), an open-source scientific and technical publishing system designed for creating beautiful, data-driven content. It is then published with [Netlify](https://app.netlify.com/).
 
-```mermaid
+```{mermaid}
 graph LR
     A["Download daily Arxiv articles"] --> B["Predict and Filter LLM topic"]
     B --> C["Summarize short docs"]
