--- a/about.qmd
+++ b/about.qmd
@@ -12,7 +12,9 @@ comments: false
 
 Welcome to the Bayesian beagle blog! This project is a unique intersection of machine learning and scientific communication, providing a platform where readers can quickly get insights from the latest research papers hosted on [ArXiv](https://arxiv.org/). Utilizing state-of-the-art Large Language Models (LLMs), our system generates concise, comprehensible summaries of complex research articles, covering a wide array of disciplines.
 
-Our blog is built using [Quarto](https://quarto.org/), an open-source scientific and technical publishing system designed for creating beautiful, data-driven content. It is then published with [Netlify](https://app.netlify.com/).
+**All content is LLM generated.** Assume skepticism and verify in the original paper as LLM models are imperfect and can struggle under certain circumstances.
+
+Our blog is built using [Quarto](https://quarto.org/) and then published with [Netlify](https://app.netlify.com/).
 
 ```{mermaid}
 graph LR
